2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.addin.xml: Bump MD version.

2007-10-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.addin.xml, MonoDevelop.Deployment.Linux.mdp,
	  MonoDevelop.Deployment.Linux/LinuxDeploymentSetup.cs,
	  MonoDevelop.Deployment.Linux/LinuxDeployData.cs, app.desktop.xft.xml,
	  Makefile.am: Added new file template for creating .desktop files. When a
	  .desktop file is added to a project, set the deploy options so it is
	  deployed to the .desktop app folder.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux/LinuxDeployExtension.cs: Use the project
	  description when generating .pc files, if available. Patch by Federico
	  Di Gregorio.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux/DotDesktopView.cs: Destroy the view widget
	  when the view is disposed.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux/LinuxIntegrationProjectFeature.cs: Track api
	  changes. Add description property.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.mdp: Project file names updated by change in
	  MD path functions.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.DesktopPanelWidget.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.BasicOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.DotDesktopViewWidget.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.MenuCategorySelectorDialog.cs:
	  Regenerated gui files.

2007-09-15  Andrés G. Aragoneses <knocte@gmail.com>

	* MonoDevelop.Deployment.Linux/DesktopInfo.xml: fix typo.
	* gtk-gui/MonoDevelop.Deployment.Linux.DesktopPanelWidget.cs:
	* gtk-gui/gui.stetic: Don't translate "page#" texts.
