@@ -1,3 +1,10 @@
+2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Deployment/DeployContext.cs,
+	  MonoDevelop.Deployment.Targets/SshFuseFileCopyHandler.cs,
+	  MonoDevelop.Deployment.Gui/PackageBuilderEditor.cs: Track LoggingService
+	  API changes.
+
 2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Deployment.Gui/DeployDialog.cs,
