@@ -1,3 +1,9 @@
+2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Deployment.Linux/LinuxDeploymentSetup.cs,
+	  MonoDevelop.Deployment.Linux/MenuCategorySelectorDialog.cs: Track
+	  LoggingService API changes.
+
 2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Deployment.Linux.addin.xml: Bump MD version.
